syntax = "proto3";
package filetransfer;
service FileTransferService {

  //服务器端流式rpc
  rpc ServerSideStreamFun(RequestData) returns (stream ResponseData){}

}
message RequestData {
  string text = 1;
}

message ResponseData {
  string deviceId = 1;
  string requestId = 2;
  bytes fileData = 3;
}